--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 	<script src="js/jquery.insects.js"></script>
-	<link rel="css/stylesheet.css" href="css/jquery.insects.css" />
+	<link rel="stylesheet" type="text/css" href="css/jquery.insects.css" />
 </head>
 <body>
 
