--- a/test.html
+++ b/test.html
@@ -6,8 +6,34 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 	<script src="js/jquery.insects.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/jquery.insects.css" />
+
+	<style type="text/css">
+	#popup {
+		width: 200px;
+		height: 200px;
+		position: absolute;
+		top: 100px;
+		left: 200px;
+		background-color: #400;
+		color: #fff;
+		display: none;
+		text-align: center;
+
+		-moz-box-shadow: 3px 3px 4px #000;
+		-webkit-box-shadow: 3px 3px 4px #000;
+		box-shadow: 3px 3px 4px #000;
+
+		-moz-border-radius: 10px;
+		-webkit-border-radius: 10px;
+		border-radius: 10px;
+
+	}
+	</style>
 </head>
 <body>
+	<a href="#" id="activate">Hover Over Me!</a>
+
+	<div id="popup">I AM A POPUP</div>
 
 </body>
 </html>
