--- a/test.html
+++ b/test.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>jInsects Demo</title>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 	<script src="js/jquery.insects.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/jquery.insects.css" />
 
 	<style type="text/css">
+	#activate {
+		position: absolute;
+		top: 100px;
+		left: 200px;
+		width: 200px;
+		height: 30px;
+		padding-top: 10px;
+		border: solid 2px #900;
+		background-color: #aaa;
+		text-align: center;
+		font-weight: bold;
+	}
+
 	#popup {
 		width: 200px;
 		height: 200px;
 		position: absolute;
-		top: 100px;
+		top: 150px;
 		left: 200px;
 		background-color: #400;
 		color: #fff;
@@ -45,9 +58,14 @@
 	</script>
 </head>
 <body>
+	<h1>jInsects Demo</h1>
+
 	<a href="#" id="activate">Hover Over Me!</a>
 
-	<div id="popup">I AM A POPUP</div>
+	<div id="popup">
+		<h3>I AM A POPUP</h3>
+		<p>What's hiding underneath me?</p>
+	</div>
 
 </body>
 </html>
