Added some settings validation and update the docs

--- a/test.html
+++ b/test.html
@@ -51,7 +51,7 @@
 				$('#popup').show();
 			},
 			function () {
-				$('#popup').insectify().hide();
+				$('#popup').insectify({chance: 1}).hide();
 			}
 		);
 	});
